Added order page (WIP)

--- a/resources/w_navbar.html
+++ b/resources/w_navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar flex-row">
+<div class="navbar flex-row font-bold">
     <span class="navbar-item flex-row">${a-home}</span>
     <span class="navbar-item flex-row">${a-menu}</span>
     <span class="navbar-item flex-row">${a-orders}</span>
