Separated pages and navbar into custom widgets. Improved order list page.

--- a/resources/w_orderlistitem.html
+++ b/resources/w_orderlistitem.html
@@ -6,7 +6,7 @@
         <span class="flex">${txt-orderedby}</span>
         <span>${txt-orderdate}</span>
     </div>
-    <div class="flex-row">
-        <span>${panel-orderdetails}</span>
+    <div class="order-list-details-wrapper flex-row">
+        ${panel-orderdetails}
     </div>
 </div>
