--- a/resources/html/w_orderlistitem.html
+++ b/resources/html/w_orderlistitem.html
@@ -1,6 +1,7 @@
 <div class="w-order-list-item flex-column">
     <div class="flex-row">
         <span class="colour-cyan">Order #${txt-ordernum}</span>
+        ${btn-complete}
     </div>
     <div class="flex-row">
         <span class="flex">${txt-orderedby}</span>
